--- a/GettingStarted/notebooks/introduction.ipynb
+++ b/GettingStarted/notebooks/introduction.ipynb
@@ -16,21 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "fecc0cdb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nGettingStarted/\\n├── data/\\n│   ├── network/\\n│   │   ├── la_link.csv\\n│   │   └── la_nodes.csv\\n│   └── results/\\n│       └── 2022-12-02 - LA Baseline 060/\\n│           ├── map/\\n│           │   ├── 2022-12-02-la_map_baseline_060_links/\\n│           │   │   └── fuel_consumption.tsv\\n│           │   └── 2022-12-02-la_map_baseline_060_legs\\n│           ├── routee\\n│           └── processed_data\\n└── notebooks/\\n    ├── introduction.ipynb\\n    ├── analytics.py\\n    └── plotting.py\\n    \\n'"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "#Directory structure\n",
     "\"\"\"\n",
@@ -57,9 +48,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "f8feb530",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -83,18 +76,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cbcc2f0e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Network file shape: (2025978, 11) (902985, 5)\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "#road network\n",
     "la_links = pd.read_csv(os.path.join(network_path,links))\n",
@@ -111,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "069a36d9",
    "metadata": {},
    "outputs": [
@@ -147,6 +134,10 @@
        "      <th>LENGTH(meters)</th>\n",
        "      <th>CAPACITY(veh/hour)</th>\n",
        "      <th>RAMP</th>\n",
+       "      <th>ref_lat</th>\n",
+       "      <th>ref_long</th>\n",
+       "      <th>nref_lat</th>\n",
+       "      <th>nref_long</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -163,6 +154,10 @@
        "      <td>106.891438</td>\n",
        "      <td>3000.0</td>\n",
        "      <td>N</td>\n",
+       "      <td>34.05241</td>\n",
+       "      <td>-118.28540</td>\n",
+       "      <td>34.05243</td>\n",
+       "      <td>-118.28656</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -177,6 +172,10 @@
        "      <td>31.343203</td>\n",
        "      <td>4500.0</td>\n",
        "      <td>N</td>\n",
+       "      <td>34.05240</td>\n",
+       "      <td>-118.29038</td>\n",
+       "      <td>34.05241</td>\n",
+       "      <td>-118.29072</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -187,12 +186,16 @@
        "0  23841635  W OLYMPIC BLVD   49251781    49251780           4          F   \n",
        "1  23841639  W OLYMPIC BLVD   49251752    49251751           4          F   \n",
        "\n",
-       "   NUM_PHYS_LANES  SPEED_KPH  LENGTH(meters)  CAPACITY(veh/hour) RAMP  \n",
-       "0             2.0         60      106.891438              3000.0    N  \n",
-       "1             3.0         60       31.343203              4500.0    N  "
+       "   NUM_PHYS_LANES  SPEED_KPH  LENGTH(meters)  CAPACITY(veh/hour) RAMP  \\\n",
+       "0             2.0         60      106.891438              3000.0    N   \n",
+       "1             3.0         60       31.343203              4500.0    N   \n",
+       "\n",
+       "    ref_lat   ref_long  nref_lat  nref_long  \n",
+       "0  34.05241 -118.28540  34.05243 -118.28656  \n",
+       "1  34.05240 -118.29038  34.05241 -118.29072  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "5d3d7bec",
    "metadata": {},
    "outputs": [
@@ -227,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "id": "1622fdcc",
    "metadata": {},
    "outputs": [
@@ -345,7 +348,7 @@
        "[2 rows x 97 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "fa9b6ffd",
    "metadata": {},
    "outputs": [
@@ -393,16 +396,16 @@
        "      <th>start time (planned)</th>\n",
        "      <th>start time (actual)</th>\n",
        "      <th>...</th>\n",
-       "      <th>duration (free)</th>\n",
-       "      <th>duration (congested)</th>\n",
-       "      <th>delay</th>\n",
-       "      <th>delay ratio</th>\n",
        "      <th>original path length (m)</th>\n",
        "      <th>total distance (m)</th>\n",
        "      <th>total fuel consumed</th>\n",
        "      <th>total productivity consumed</th>\n",
        "      <th>reroutable</th>\n",
        "      <th>rerouted</th>\n",
+       "      <th>ref_lat</th>\n",
+       "      <th>ref_long</th>\n",
+       "      <th>nref_lat</th>\n",
+       "      <th>nref_long</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -419,16 +422,16 @@
        "      <td>01:02:44:40.820</td>\n",
        "      <td>01:02:44:40.820</td>\n",
        "      <td>...</td>\n",
-       "      <td>00:05:11.030</td>\n",
-       "      <td>00:05:11.031</td>\n",
-       "      <td>00:00:00.001</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>6401.210</td>\n",
        "      <td>6401.210</td>\n",
        "      <td>0.725070</td>\n",
        "      <td>0.647981</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>33.26701</td>\n",
+       "      <td>-115.96258</td>\n",
+       "      <td>33.29595</td>\n",
+       "      <td>-115.99007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -443,20 +446,20 @@
        "      <td>01:04:18:45.119</td>\n",
        "      <td>01:04:18:45.119</td>\n",
        "      <td>...</td>\n",
-       "      <td>00:00:19.620</td>\n",
-       "      <td>00:00:19.619</td>\n",
-       "      <td>-00:00:00.001</td>\n",
-       "      <td>0.999968</td>\n",
        "      <td>217.996</td>\n",
        "      <td>217.996</td>\n",
        "      <td>0.015437</td>\n",
        "      <td>0.040873</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>33.29649</td>\n",
+       "      <td>-115.98515</td>\n",
+       "      <td>33.29527</td>\n",
+       "      <td>-115.98383</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 22 columns</p>\n",
+       "<p>2 rows × 26 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -464,26 +467,26 @@
        "0       0  400000000     3       -1            1           2   209038701   \n",
        "1       1  400000001     3       -1            1           2   209038419   \n",
        "\n",
-       "    end node start time (planned) start time (actual)  ... duration (free)  \\\n",
-       "0  209038377      01:02:44:40.820     01:02:44:40.820  ...    00:05:11.030   \n",
-       "1  209038436      01:04:18:45.119     01:04:18:45.119  ...    00:00:19.620   \n",
+       "    end node start time (planned) start time (actual)  ...  \\\n",
+       "0  209038377      01:02:44:40.820     01:02:44:40.820  ...   \n",
+       "1  209038436      01:04:18:45.119     01:04:18:45.119  ...   \n",
        "\n",
-       "  duration (congested)          delay delay ratio original path length (m)  \\\n",
-       "0         00:05:11.031   00:00:00.001    1.000000                 6401.210   \n",
-       "1         00:00:19.619  -00:00:00.001    0.999968                  217.996   \n",
+       "  original path length (m) total distance (m) total fuel consumed  \\\n",
+       "0                 6401.210           6401.210            0.725070   \n",
+       "1                  217.996            217.996            0.015437   \n",
        "\n",
-       "   total distance (m)  total fuel consumed  total productivity consumed  \\\n",
-       "0            6401.210             0.725070                     0.647981   \n",
-       "1             217.996             0.015437                     0.040873   \n",
+       "  total productivity consumed reroutable  rerouted   ref_lat   ref_long  \\\n",
+       "0                    0.647981          0         0  33.26701 -115.96258   \n",
+       "1                    0.040873          0         0  33.29649 -115.98515   \n",
        "\n",
-       "   reroutable  rerouted  \n",
-       "0           0         0  \n",
-       "1           0         0  \n",
+       "   nref_lat  nref_long  \n",
+       "0  33.29595 -115.99007  \n",
+       "1  33.29527 -115.98383  \n",
        "\n",
-       "[2 rows x 22 columns]"
+       "[2 rows x 26 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,8 +498,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "1db26ea9",
+   "execution_count": null,
+   "id": "37dbc02a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,6 +514,14 @@
     "legs_sample_geom = kepler_legs(legs_sample, nodespath)\n",
     "legs_sample_geom.to_csv(\"../data/processed_data/la_legsample_geom.csv\", index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "829d1880",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
