--- a/GettingStarted/notebooks/introduction.ipynb
+++ b/GettingStarted/notebooks/introduction.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Introduction\n",
     "\n",
-    "#### Data for LA SCAG Region, California\n",
+    "#### Mobilit Simulation - LA SCAG Region\n",
     "- Network files: Mobiliti and HPCBD > LA Network > Here Map > 2021-07-30 Network - Highway & Ramp Speed Increase \n",
     "- Result files: Mobiliti and HPCBD > Results\n",
     "- Documentation: Mobiliti and HPCBD > Documentation > Mobiliti Output File Formats, Mobiliti Network Documentation\n",
@@ -18,12 +18,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fecc0cdb",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Directory structure\n",
+    "# Please download the network and results file from the Team drive. \n",
+    "# I have copied the scripts from the repo 'Tools' into the notebook directory. \n",
+    "\n",
     "\"\"\"\n",
     "GettingStarted/\n",
     "├── data/\n",
@@ -499,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37dbc02a",
+   "id": "20f99947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,14 +515,6 @@
     "legs_sample_geom = kepler_legs(legs_sample, nodespath)\n",
     "legs_sample_geom.to_csv(\"../data/processed_data/la_legsample_geom.csv\", index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "829d1880",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
