--- a/GettingStarted/notebooks/introduction.ipynb
+++ b/GettingStarted/notebooks/introduction.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "#Directory structure\n",
     "# Please download the network and results file from the Team drive. \n",
-    "# I have copied the scripts from the repo 'Tools' into the notebook directory. \n",
+    "# I have copied the scripts from the repo 'Tools' into the notebook subdirectory. \n",
     "\n",
     "\"\"\"\n",
     "GettingStarted/\n",
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20f99947",
+   "id": "6faf6393",
    "metadata": {},
    "outputs": [],
    "source": [
