--- a/GettingStarted/notebooks/introduction.ipynb
+++ b/GettingStarted/notebooks/introduction.ipynb
@@ -60,7 +60,8 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "import analytics #UDF functions \n",
+    "#All analytics and plotting functions \n",
+    "import analytics \n",
     "import plotting \n",
     "\n",
     "\n",
@@ -500,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c829ddbb",
+   "id": "e3add32e",
    "metadata": {},
    "outputs": [],
    "source": [
