--- a/GettingStarted/notebooks/introduction.ipynb
+++ b/GettingStarted/notebooks/introduction.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### Introduction\n",
     "\n",
-    "#### Mobilit Simulation - LA SCAG Region\n",
+    "#### Mobiliti Simulation - LA SCAG Region\n",
     "- Network files: Mobiliti and HPCBD > LA Network > Here Map > 2021-07-30 Network - Highway & Ramp Speed Increase \n",
     "- Result files: Mobiliti and HPCBD > Results\n",
     "- Documentation: Mobiliti and HPCBD > Documentation > Mobiliti Output File Formats, Mobiliti Network Documentation\n",
