--- a/GettingStarted/notebooks/introduction.ipynb
+++ b/GettingStarted/notebooks/introduction.ipynb
@@ -78,11 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "cbcc2f0e",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#road network\n",
@@ -362,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "id": "fa9b6ffd",
    "metadata": {},
    "outputs": [
@@ -398,16 +396,16 @@
        "      <th>start time (planned)</th>\n",
        "      <th>start time (actual)</th>\n",
        "      <th>...</th>\n",
+       "      <th>duration (free)</th>\n",
+       "      <th>duration (congested)</th>\n",
+       "      <th>delay</th>\n",
+       "      <th>delay ratio</th>\n",
        "      <th>original path length (m)</th>\n",
        "      <th>total distance (m)</th>\n",
        "      <th>total fuel consumed</th>\n",
        "      <th>total productivity consumed</th>\n",
        "      <th>reroutable</th>\n",
        "      <th>rerouted</th>\n",
-       "      <th>ref_lat</th>\n",
-       "      <th>ref_long</th>\n",
-       "      <th>nref_lat</th>\n",
-       "      <th>nref_long</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -424,16 +422,16 @@
        "      <td>01:02:44:40.820</td>\n",
        "      <td>01:02:44:40.820</td>\n",
        "      <td>...</td>\n",
+       "      <td>00:05:11.030</td>\n",
+       "      <td>00:05:11.031</td>\n",
+       "      <td>00:00:00.001</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>6401.210</td>\n",
        "      <td>6401.210</td>\n",
        "      <td>0.725070</td>\n",
        "      <td>0.647981</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>33.26701</td>\n",
-       "      <td>-115.96258</td>\n",
-       "      <td>33.29595</td>\n",
-       "      <td>-115.99007</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -448,20 +446,20 @@
        "      <td>01:04:18:45.119</td>\n",
        "      <td>01:04:18:45.119</td>\n",
        "      <td>...</td>\n",
+       "      <td>00:00:19.620</td>\n",
+       "      <td>00:00:19.619</td>\n",
+       "      <td>-00:00:00.001</td>\n",
+       "      <td>0.999968</td>\n",
        "      <td>217.996</td>\n",
        "      <td>217.996</td>\n",
        "      <td>0.015437</td>\n",
        "      <td>0.040873</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>33.29649</td>\n",
-       "      <td>-115.98515</td>\n",
-       "      <td>33.29527</td>\n",
-       "      <td>-115.98383</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 26 columns</p>\n",
+       "<p>2 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -469,26 +467,26 @@
        "0       0  400000000     3       -1            1           2   209038701   \n",
        "1       1  400000001     3       -1            1           2   209038419   \n",
        "\n",
-       "    end node start time (planned) start time (actual)  ...  \\\n",
-       "0  209038377      01:02:44:40.820     01:02:44:40.820  ...   \n",
-       "1  209038436      01:04:18:45.119     01:04:18:45.119  ...   \n",
+       "    end node start time (planned) start time (actual)  ... duration (free)  \\\n",
+       "0  209038377      01:02:44:40.820     01:02:44:40.820  ...    00:05:11.030   \n",
+       "1  209038436      01:04:18:45.119     01:04:18:45.119  ...    00:00:19.620   \n",
        "\n",
-       "  original path length (m) total distance (m) total fuel consumed  \\\n",
-       "0                 6401.210           6401.210            0.725070   \n",
-       "1                  217.996            217.996            0.015437   \n",
+       "  duration (congested)          delay delay ratio original path length (m)  \\\n",
+       "0         00:05:11.031   00:00:00.001    1.000000                 6401.210   \n",
+       "1         00:00:19.619  -00:00:00.001    0.999968                  217.996   \n",
        "\n",
-       "  total productivity consumed reroutable  rerouted   ref_lat   ref_long  \\\n",
-       "0                    0.647981          0         0  33.26701 -115.96258   \n",
-       "1                    0.040873          0         0  33.29649 -115.98515   \n",
+       "   total distance (m)  total fuel consumed  total productivity consumed  \\\n",
+       "0            6401.210             0.725070                     0.647981   \n",
+       "1             217.996             0.015437                     0.040873   \n",
        "\n",
-       "   nref_lat  nref_long  \n",
-       "0  33.29595 -115.99007  \n",
-       "1  33.29527 -115.98383  \n",
+       "   reroutable  rerouted  \n",
+       "0           0         0  \n",
+       "1           0         0  \n",
        "\n",
-       "[2 rows x 26 columns]"
+       "[2 rows x 22 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
