--- a/GettingStarted/notebooks/introduction.ipynb
+++ b/GettingStarted/notebooks/introduction.ipynb
@@ -78,10 +78,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "cbcc2f0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Network file shape: (2025978, 11) (902985, 5)\n"
+     ]
+    }
+   ],
    "source": [
     "#road network\n",
     "la_links = pd.read_csv(os.path.join(network_path,links))\n",
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "id": "069a36d9",
    "metadata": {},
    "outputs": [
@@ -134,10 +142,6 @@
        "      <th>LENGTH(meters)</th>\n",
        "      <th>CAPACITY(veh/hour)</th>\n",
        "      <th>RAMP</th>\n",
-       "      <th>ref_lat</th>\n",
-       "      <th>ref_long</th>\n",
-       "      <th>nref_lat</th>\n",
-       "      <th>nref_long</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -154,10 +158,6 @@
        "      <td>106.891438</td>\n",
        "      <td>3000.0</td>\n",
        "      <td>N</td>\n",
-       "      <td>34.05241</td>\n",
-       "      <td>-118.28540</td>\n",
-       "      <td>34.05243</td>\n",
-       "      <td>-118.28656</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -172,10 +172,6 @@
        "      <td>31.343203</td>\n",
        "      <td>4500.0</td>\n",
        "      <td>N</td>\n",
-       "      <td>34.05240</td>\n",
-       "      <td>-118.29038</td>\n",
-       "      <td>34.05241</td>\n",
-       "      <td>-118.29072</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -186,16 +182,12 @@
        "0  23841635  W OLYMPIC BLVD   49251781    49251780           4          F   \n",
        "1  23841639  W OLYMPIC BLVD   49251752    49251751           4          F   \n",
        "\n",
-       "   NUM_PHYS_LANES  SPEED_KPH  LENGTH(meters)  CAPACITY(veh/hour) RAMP  \\\n",
-       "0             2.0         60      106.891438              3000.0    N   \n",
-       "1             3.0         60       31.343203              4500.0    N   \n",
-       "\n",
-       "    ref_lat   ref_long  nref_lat  nref_long  \n",
-       "0  34.05241 -118.28540  34.05243 -118.28656  \n",
-       "1  34.05240 -118.29038  34.05241 -118.29072  "
+       "   NUM_PHYS_LANES  SPEED_KPH  LENGTH(meters)  CAPACITY(veh/hour) RAMP  \n",
+       "0             2.0         60      106.891438              3000.0    N  \n",
+       "1             3.0         60       31.343203              4500.0    N  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,6 +505,114 @@
     "nodespath = os.path.join(network_path, nodes)\n",
     "legs_sample_geom = kepler_legs(legs_sample, nodespath)\n",
     "legs_sample_geom.to_csv(\"../data/processed_data/la_legsample_geom.csv\", index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "1692e278",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LINK_ID</th>\n",
+       "      <th>ST_NAME</th>\n",
+       "      <th>REF_IN_ID</th>\n",
+       "      <th>NREF_IN_ID</th>\n",
+       "      <th>FUNC_CLASS</th>\n",
+       "      <th>DIR_TRAVEL</th>\n",
+       "      <th>NUM_PHYS_LANES</th>\n",
+       "      <th>SPEED_KPH</th>\n",
+       "      <th>LENGTH(meters)</th>\n",
+       "      <th>CAPACITY(veh/hour)</th>\n",
+       "      <th>RAMP</th>\n",
+       "      <th>ref_lat</th>\n",
+       "      <th>ref_long</th>\n",
+       "      <th>nref_lat</th>\n",
+       "      <th>nref_long</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>23841635</td>\n",
+       "      <td>W OLYMPIC BLVD</td>\n",
+       "      <td>49251781</td>\n",
+       "      <td>49251780</td>\n",
+       "      <td>4</td>\n",
+       "      <td>F</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>106.891438</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>34.05241</td>\n",
+       "      <td>-118.28540</td>\n",
+       "      <td>34.05243</td>\n",
+       "      <td>-118.28656</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23841639</td>\n",
+       "      <td>W OLYMPIC BLVD</td>\n",
+       "      <td>49251752</td>\n",
+       "      <td>49251751</td>\n",
+       "      <td>4</td>\n",
+       "      <td>F</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>31.343203</td>\n",
+       "      <td>4500.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>34.05240</td>\n",
+       "      <td>-118.29038</td>\n",
+       "      <td>34.05241</td>\n",
+       "      <td>-118.29072</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    LINK_ID         ST_NAME  REF_IN_ID  NREF_IN_ID  FUNC_CLASS DIR_TRAVEL  \\\n",
+       "0  23841635  W OLYMPIC BLVD   49251781    49251780           4          F   \n",
+       "1  23841639  W OLYMPIC BLVD   49251752    49251751           4          F   \n",
+       "\n",
+       "   NUM_PHYS_LANES  SPEED_KPH  LENGTH(meters)  CAPACITY(veh/hour) RAMP  \\\n",
+       "0             2.0         60      106.891438              3000.0    N   \n",
+       "1             3.0         60       31.343203              4500.0    N   \n",
+       "\n",
+       "    ref_lat   ref_long  nref_lat  nref_long  \n",
+       "0  34.05241 -118.28540  34.05243 -118.28656  \n",
+       "1  34.05240 -118.29038  34.05241 -118.29072  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "la_links_geom.head(2)"
    ]
   }
  ],
