added the bay area file locations

--- a/GettingStarted/notebooks/introduction.ipynb
+++ b/GettingStarted/notebooks/introduction.ipynb
@@ -7,11 +7,28 @@
    "source": [
     "### Introduction\n",
     "\n",
-    "#### Mobiliti Simulation - LA SCAG Region\n",
+    "#### Files on the team drive - LA SCAG Region\n",
     "- Network files: Mobiliti and HPCBD > LA Network > Here Map > 2021-07-30 Network - Highway & Ramp Speed Increase \n",
-    "- Result files: Mobiliti and HPCBD > Results\n",
-    "- Documentation: Mobiliti and HPCBD > Documentation > Mobiliti Output File Formats, Mobiliti Network Documentation\n",
-    "- Code repo for all analytics functions: https://github.com/anu-kuncheria/mobiliti-analytics/tree/main/Tools"
+    "- Simulation result files: Mobiliti and HPCBD > Results > 2022-12-02 - LA Baseline 060\n",
+    "\n",
+    "#### Files on the team drive -  SF Bay Area Region\n",
+    "- Network files: Mobiliti and HPCBD > Bay Area Network > Here Map > 2021-07-30 Network - Highway & Ramp Speed Increase\n",
+    "- Simulation result files:\n",
+    "\n",
+    "1) UET:   Mobiliti and HPCBD > Results > 2022-02-17 - SF Baseline, UET, SOT, SOF, 0% Rerouting > 2022-02-17-sf_uet_000_legs.tgz, 2022-02-17-sf_uet_000_links.tgz\n",
+    "\n",
+    "\n",
+    "2) UET + Signals:   Mobiliti and HPCBD > Results > 2022-10-07 - SF Signals, UET 000, Wrapped and Unwrapped Metrics, All Routes > 2022-10-06-sf_uet_000_legs.tgz, 2022-10-06-sf_uet_000_links.tgz\n",
+    "\n",
+    "\n",
+    "#### General \n",
+    "\n",
+    "1) Documentation: Mobiliti and HPCBD > Documentation > \n",
+    "\n",
+    "- Mobiliti Output File Formats\n",
+    "- Network > Mobiliti Network \n",
+    "\n",
+    "2) Code repo for all analytics functions: https://github.com/anu-kuncheria/mobiliti-analytics/tree/main/Tools"
    ]
   },
   {
@@ -510,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "1692e278",
+   "id": "ee548d5f",
    "metadata": {},
    "outputs": [
     {
