--- a/GettingStarted/notebooks/introduction.ipynb
+++ b/GettingStarted/notebooks/introduction.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "#Directory structure\n",
     "# Please download the network and results file from the Team drive. \n",
-    "# I have copied the scripts from the repo 'Tools' into the notebooks subdirectory. \n",
+    "# Copy the python scripts in 'Tools' repo into the notebooks subdirectory. \n",
     "\n",
     "\"\"\"\n",
     "GettingStarted/\n",
@@ -115,10 +115,10 @@
     "\n",
     "#links fuel results\n",
     "links_fuel = read_file(os.path.join(links_path, fupath))\n",
-    "links_fuel_sample = links_fuel.head(100)\n",
+    "links_fuel_sample = links_fuel.head(1000) #random 1000 links\n",
     "\n",
     "#legs results\n",
-    "legs_sample = pd.read_csv(legs_path, sep = '\\t', nrows = 100)"
+    "legs_sample = pd.read_csv(legs_path, sep = '\\t', nrows = 1000)"
    ]
   },
   {
