added more comments

--- a/GettingStarted/notebooks/introduction.ipynb
+++ b/GettingStarted/notebooks/introduction.ipynb
@@ -39,8 +39,8 @@
    "outputs": [],
    "source": [
     "#Directory structure\n",
-    "# Please download the network and results file from the Team drive. \n",
-    "# Copy the python scripts in 'Tools' repo into the notebooks subdirectory. \n",
+    "# Download the network and results file from the Google Team drive. \n",
+    "# Copy the python scripts (analytics.py and plotting.py) in 'Tools' subfolder in the mobiliti-analytics repository into the notebooks subfolder. \n",
     "\n",
     "\"\"\"\n",
     "GettingStarted/\n",
