updated teh fuel consumption fucntion

--- a/FuelModelComparison/fuelmodel_comparison.ipynb
+++ b/FuelModelComparison/fuelmodel_comparison.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e716522",
+   "id": "e749a411",
    "metadata": {},
    "source": [
     "### 1. Check if the results are reasonable"
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f3de7f5c",
+   "id": "dee20270",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8509ce50",
+   "id": "d52f8709",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4297cca1",
+   "id": "ffcc51a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0b19656",
+   "id": "d68b3c9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dd919dc",
+   "id": "1ce7acea",
    "metadata": {},
    "source": [
     "### 2. Fuel Model Comparisons"
@@ -141,18 +141,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad0979c2",
+   "id": "0b2ac55e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1.Total\n",
-    "ana.fuel_milliongallons(map_legs), ana.fuel_milliongallons(routee_legs)"
+    "ana.fuel_gallons(map_legs), ana.fuel_gallons(routee_legs)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a13d8d69",
+   "id": "73f3736e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeac86b2",
+   "id": "bb93ba3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23bc6b14",
+   "id": "4d3198b0",
    "metadata": {},
    "outputs": [],
    "source": [
