updated the path for tools

--- a/GettingStarted/notebooks/introduction.ipynb
+++ b/GettingStarted/notebooks/introduction.ipynb
@@ -23,12 +23,10 @@
     "\n",
     "#### General \n",
     "\n",
-    "1) Documentation: Mobiliti and HPCBD > Documentation > \n",
+    "Documentation: Mobiliti and HPCBD > Documentation > \n",
     "\n",
     "- Mobiliti Output File Formats\n",
-    "- Network > Mobiliti Network \n",
-    "\n",
-    "2) Sub directory for all analytics functions: https://github.com/anu-kuncheria/mobiliti-analytics/tree/main/Tools"
+    "- Network > Mobiliti Network \n"
    ]
   },
   {
@@ -56,9 +54,7 @@
     "│           └── processed_data\n",
     "└── notebooks/\n",
     "    ├── introduction.ipynb\n",
-    "    ├── analytics.py\n",
-    "    └── plotting.py\n",
-    "    \n",
+    "  \n",
     "\"\"\""
    ]
   },
@@ -75,7 +71,7 @@
     "import numpy as np\n",
     "import os\n",
     "import sys \n",
-    "sys.path.append(\"../Tools\")\n",
+    "sys.path.append(\"../../Tools\")\n",
     "\n",
     "import analytics as ana\n",
     "import plotting as pl\n",
