updated the path for tools

--- a/GettingStarted/notebooks/introduction.ipynb
+++ b/GettingStarted/notebooks/introduction.ipynb
@@ -71,8 +71,8 @@
     "import numpy as np\n",
     "import os\n",
     "import sys \n",
-    "sys.path.append(\"../../Tools\")\n",
     "\n",
+    "sys.path.append(\"../../Tools\")\n",
     "import analytics as ana\n",
     "import plotting as pl\n",
     "\n",
@@ -108,7 +108,7 @@
     "print(\"Network file shape:\", la_links.shape, la_nodes.shape)\n",
     "\n",
     "#links fuel results\n",
-    "links_fuel = read_file(os.path.join(links_path, fupath))\n",
+    "links_fuel = ana.read_file(os.path.join(links_path, fupath))\n",
     "links_fuel_sample = links_fuel.head(1000) #random 1000 links\n",
     "\n",
     "#legs results\n",
@@ -507,14 +507,14 @@
    "outputs": [],
    "source": [
     "# Adding geometry to  visualise in Kepler\n",
-    "la_links_geom = links_geom(la_links,la_nodes)\n",
+    "la_links_geom = pl.links_geom(la_links,la_nodes)\n",
     "la_links_geom.to_csv(\"../data/processed_data/la_links_geom.csv\", index = False)\n",
     "\n",
-    "links_fuel_sample_geom = kepler_geom(links_fuel_sample, la_links, la_nodes)\n",
+    "links_fuel_sample_geom = pl.kepler_geom(links_fuel_sample, la_links, la_nodes)\n",
     "links_fuel_sample_geom.to_csv(\"../data/processed_data/la_fuelsample_geom.csv\", index = False)\n",
     "\n",
     "nodespath = os.path.join(network_path, nodes)\n",
-    "legs_sample_geom = kepler_legs(legs_sample, nodespath)\n",
+    "legs_sample_geom = pl.kepler_legs(legs_sample, nodespath)\n",
     "legs_sample_geom.to_csv(\"../data/processed_data/la_legsample_geom.csv\", index = False)"
    ]
   },
